--- a/ClassifactionAssignmentV3.ipynb
+++ b/ClassifactionAssignmentV3.ipynb
@@ -11,7 +11,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 75,
       "id": "1b540543",
       "metadata": {
         "_cell_guid": "b1076dfc-b9ad-4769-8c92-a6c4dae69d19",
@@ -40,16 +40,13 @@
         "# We load most of the packages we need for the project.\n",
         "import pandas as pd\n",
         "import numpy as np\n",
-        "import matplotlib.pyplot as plt\n",
         "from sklearn.model_selection import train_test_split\n",
-        "from sklearn.tree import DecisionTreeClassifier\n",
-        "import seaborn as sns\n",
-        "from sklearn.metrics  import f1_score,accuracy_score"
+        "from sklearn.metrics  import f1_score, accuracy_score"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 76,
       "id": "647b1a4a",
       "metadata": {
         "execution": {
@@ -274,7 +271,7 @@
               "[5 rows x 27 columns]"
             ]
           },
-          "execution_count": 3,
+          "execution_count": 76,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -287,7 +284,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 77,
       "id": "aa3a9d71",
       "metadata": {
         "execution": {
@@ -316,7 +313,7 @@
               "(899164, 27)"
             ]
           },
-          "execution_count": 4,
+          "execution_count": 77,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -337,7 +334,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 78,
       "id": "cd7164f0",
       "metadata": {
         "collapsed": false,
@@ -398,7 +395,7 @@
               "dtype: int64"
             ]
           },
-          "execution_count": 5,
+          "execution_count": 78,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -410,7 +407,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 79,
       "id": "fd60b7e9",
       "metadata": {
         "collapsed": false,
@@ -446,7 +443,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 80,
       "id": "edcc7566",
       "metadata": {
         "collapsed": false,
@@ -482,7 +479,7 @@
               "Name: Default, dtype: int64"
             ]
           },
-          "execution_count": 7,
+          "execution_count": 80,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -495,7 +492,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 81,
       "id": "b0507c6e",
       "metadata": {
         "collapsed": false,
@@ -535,7 +532,7 @@
               "      dtype='object')"
             ]
           },
-          "execution_count": 8,
+          "execution_count": 81,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -564,7 +561,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 82,
       "id": "d2f47f7f",
       "metadata": {
         "collapsed": false,
@@ -605,7 +602,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": 83,
       "id": "0afe6f93",
       "metadata": {
         "collapsed": false,
@@ -813,7 +810,7 @@
               "4       $0.00   $229,000.00   $229,000.00           0        0  "
             ]
           },
-          "execution_count": 10,
+          "execution_count": 83,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -825,7 +822,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": 84,
       "id": "12437a72",
       "metadata": {
         "collapsed": false,
@@ -859,7 +856,7 @@
               "(802319, 19)"
             ]
           },
-          "execution_count": 11,
+          "execution_count": 84,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -871,7 +868,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": 85,
       "id": "9d2da6c3",
       "metadata": {
         "collapsed": false,
@@ -916,7 +913,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": 86,
       "id": "19dc5bbf",
       "metadata": {
         "collapsed": false,
@@ -952,7 +949,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": 87,
       "id": "62e2d456",
       "metadata": {
         "collapsed": false,
@@ -990,7 +987,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": 88,
       "id": "3ec6bd14",
       "metadata": {
         "execution": {
@@ -1019,7 +1016,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": 89,
       "id": "49516c01",
       "metadata": {
         "collapsed": false,
@@ -1056,7 +1053,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": 90,
       "id": "074cf126",
       "metadata": {
         "collapsed": false,
@@ -1090,7 +1087,7 @@
               "(783512, 19)"
             ]
           },
-          "execution_count": 17,
+          "execution_count": 90,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1101,7 +1098,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": 91,
       "id": "4af0f04f",
       "metadata": {
         "collapsed": false,
@@ -1136,7 +1133,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": 92,
       "id": "3738d465",
       "metadata": {
         "collapsed": false,
@@ -1173,7 +1170,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": 93,
       "id": "da6da420",
       "metadata": {
         "collapsed": false,
@@ -1396,7 +1393,7 @@
               "[5 rows x 123 columns]"
             ]
           },
-          "execution_count": 20,
+          "execution_count": 93,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1407,7 +1404,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": 94,
       "id": "9bc4e9ad",
       "metadata": {
         "collapsed": false,
@@ -1442,18 +1439,19 @@
               "       32, 56, 48, 11, 92, 22, 49, 55])"
             ]
           },
-          "execution_count": 21,
+          "execution_count": 94,
           "metadata": {},
           "output_type": "execute_result"
         }
       ],
       "source": [
+        "# We find the uniques in this column\n",
         "df['NAICS'].unique()"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 22,
+      "execution_count": 95,
       "id": "de962508",
       "metadata": {
         "collapsed": false,
@@ -1492,7 +1490,7 @@
               "      dtype='object', length=123)"
             ]
           },
-          "execution_count": 22,
+          "execution_count": 95,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1503,7 +1501,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 23,
+      "execution_count": 96,
       "id": "90f5426f",
       "metadata": {
         "collapsed": false,
@@ -1548,7 +1546,7 @@
               "Length: 123, dtype: object"
             ]
           },
-          "execution_count": 23,
+          "execution_count": 96,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1559,7 +1557,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 24,
+      "execution_count": 97,
       "metadata": {},
       "outputs": [
         {
@@ -1757,7 +1755,7 @@
               "[5 rows x 123 columns]"
             ]
           },
-          "execution_count": 24,
+          "execution_count": 97,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1779,7 +1777,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 25,
+      "execution_count": 98,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -1787,22 +1785,27 @@
         "# https://www.educative.io/blog/scikit-learn-cheat-sheet-classification-regression-methods\n",
         "# https://www.kaggle.com/code/ec200000/dsi-project#Modeling\n",
         "\n",
+        "# Here we seperate the defualted from the rest of the dataset\n",
         "y = df['Defaulted']\n",
         "X = df.drop(columns=['Defaulted'])\n",
         "\n",
+        "# A backup of our defualted column\n",
         "y_backup = y\n",
         "\n",
+        "# Changed the rest of the dataset to a Numpy array\n",
         "X = X.to_numpy()\n",
         "\n",
+        "# We change the categorical variables into indicator variables\n",
         "y = pd.get_dummies(y)\n",
         "y = y.to_numpy()\n",
         "\n",
+        "# We create our train/test split\n",
         "X_train, X_test, y_train, y_test = train_test_split(X, y, random_state=0, stratify=y)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 26,
+      "execution_count": 99,
       "metadata": {},
       "outputs": [
         {
@@ -1811,25 +1814,26 @@
               "RandomForestClassifier()"
             ]
           },
-          "execution_count": 26,
+          "execution_count": 99,
           "metadata": {},
           "output_type": "execute_result"
         }
       ],
       "source": [
         "from sklearn.ensemble import RandomForestClassifier\n",
+        "\n",
+        "# We call the Random Forest model for our classification.\n",
         "RF = RandomForestClassifier()\n",
         "RF.fit(X_train,y_train)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 38,
+      "execution_count": 100,
       "metadata": {},
       "outputs": [],
       "source": [
-        "from sklearn.metrics import precision_score, confusion_matrix, multilabel_confusion_matrix, recall_score\n",
-        "from sklearn.metrics import classification_report\n",
+        "from sklearn.metrics import precision_score, multilabel_confusion_matrix, recall_score\n",
         "import math\n",
         "\n",
         "# We use the predict() on the model to predict the output\n",
@@ -1858,7 +1862,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 47,
+      "execution_count": 101,
       "metadata": {
         "id": "GvJ5GWUr9y9P"
       },
@@ -1867,13 +1871,13 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "The Random Forest model has a accuracy score of 0.9999642634701191 and a F1 score of 0.9999668159946905.\n",
-            "This model also has a Precision Score of 0.9999693685322932.\n",
-            "This model also has a recall score of 0.9999642634701191.\n",
+            "The Random Forest model has a accuracy score of 0.9999693686886736 and a F1 score of 0.999974473776911.\n",
+            "This model also has a Precision Score of 0.9999795789172742.\n",
+            "This model also has a recall score of 0.9999693686886736.\n",
             "[[[ 31812      1]\n",
-            "  [     5 164060]]\n",
+            "  [     4 164061]]\n",
             "\n",
-            " [[164060      5]\n",
+            " [[164062      3]\n",
             "  [     2  31811]]]\n"
           ]
         }
@@ -1886,18 +1890,12 @@
         "rsc = recall_score(y_test, pred, average=\"micro\")\n",
         "cfmm = multilabel_confusion_matrix(y_test, pred)\n",
         "\n",
+        "# Here we print out the results of our model.\n",
         "print(f\"The Random Forest model has a accuracy score of {accuracy} and a F1 score of {f1}.\")\n",
         "print(f\"This model also has a Precision Score of {psc}.\")\n",
         "print(f\"This model also has a recall score of {rsc}.\")\n",
         "print(cfmm)"
       ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
-      "source": []
     }
   ],
   "metadata": {
