Made a few edits

--- a/ClassifactionAssignmentFinal.ipynb
+++ b/ClassifactionAssignmentFinal.ipynb
@@ -11,7 +11,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 75,
+      "execution_count": 26,
       "id": "1b540543",
       "metadata": {
         "_cell_guid": "b1076dfc-b9ad-4769-8c92-a6c4dae69d19",
@@ -46,7 +46,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 76,
+      "execution_count": 27,
       "id": "647b1a4a",
       "metadata": {
         "execution": {
@@ -271,7 +271,7 @@
               "[5 rows x 27 columns]"
             ]
           },
-          "execution_count": 76,
+          "execution_count": 27,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -284,7 +284,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 77,
+      "execution_count": 28,
       "id": "aa3a9d71",
       "metadata": {
         "execution": {
@@ -313,7 +313,7 @@
               "(899164, 27)"
             ]
           },
-          "execution_count": 77,
+          "execution_count": 28,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -334,7 +334,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 78,
+      "execution_count": 29,
       "id": "cd7164f0",
       "metadata": {
         "collapsed": false,
@@ -395,7 +395,7 @@
               "dtype: int64"
             ]
           },
-          "execution_count": 78,
+          "execution_count": 29,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -407,7 +407,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 79,
+      "execution_count": 30,
       "id": "fd60b7e9",
       "metadata": {
         "collapsed": false,
@@ -443,7 +443,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 80,
+      "execution_count": 31,
       "id": "edcc7566",
       "metadata": {
         "collapsed": false,
@@ -479,7 +479,7 @@
               "Name: Default, dtype: int64"
             ]
           },
-          "execution_count": 80,
+          "execution_count": 31,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -492,7 +492,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 81,
+      "execution_count": 32,
       "id": "b0507c6e",
       "metadata": {
         "collapsed": false,
@@ -532,7 +532,7 @@
               "      dtype='object')"
             ]
           },
-          "execution_count": 81,
+          "execution_count": 32,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -561,7 +561,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 82,
+      "execution_count": 33,
       "id": "d2f47f7f",
       "metadata": {
         "collapsed": false,
@@ -602,7 +602,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 83,
+      "execution_count": 34,
       "id": "0afe6f93",
       "metadata": {
         "collapsed": false,
@@ -810,7 +810,7 @@
               "4       $0.00   $229,000.00   $229,000.00           0        0  "
             ]
           },
-          "execution_count": 83,
+          "execution_count": 34,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -822,7 +822,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 84,
+      "execution_count": 35,
       "id": "12437a72",
       "metadata": {
         "collapsed": false,
@@ -856,7 +856,7 @@
               "(802319, 19)"
             ]
           },
-          "execution_count": 84,
+          "execution_count": 35,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -868,7 +868,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 85,
+      "execution_count": 36,
       "id": "9d2da6c3",
       "metadata": {
         "collapsed": false,
@@ -913,7 +913,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 86,
+      "execution_count": 37,
       "id": "19dc5bbf",
       "metadata": {
         "collapsed": false,
@@ -949,7 +949,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 87,
+      "execution_count": 38,
       "id": "62e2d456",
       "metadata": {
         "collapsed": false,
@@ -987,7 +987,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 88,
+      "execution_count": 39,
       "id": "3ec6bd14",
       "metadata": {
         "execution": {
@@ -1016,7 +1016,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 89,
+      "execution_count": 40,
       "id": "49516c01",
       "metadata": {
         "collapsed": false,
@@ -1053,7 +1053,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 90,
+      "execution_count": 41,
       "id": "074cf126",
       "metadata": {
         "collapsed": false,
@@ -1087,7 +1087,7 @@
               "(783512, 19)"
             ]
           },
-          "execution_count": 90,
+          "execution_count": 41,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1098,7 +1098,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 91,
+      "execution_count": 42,
       "id": "4af0f04f",
       "metadata": {
         "collapsed": false,
@@ -1133,7 +1133,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 92,
+      "execution_count": 43,
       "id": "3738d465",
       "metadata": {
         "collapsed": false,
@@ -1170,7 +1170,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 93,
+      "execution_count": 44,
       "id": "da6da420",
       "metadata": {
         "collapsed": false,
@@ -1393,7 +1393,7 @@
               "[5 rows x 123 columns]"
             ]
           },
-          "execution_count": 93,
+          "execution_count": 44,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1404,7 +1404,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 94,
+      "execution_count": 45,
       "id": "9bc4e9ad",
       "metadata": {
         "collapsed": false,
@@ -1439,7 +1439,7 @@
               "       32, 56, 48, 11, 92, 22, 49, 55])"
             ]
           },
-          "execution_count": 94,
+          "execution_count": 45,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1451,7 +1451,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 95,
+      "execution_count": 46,
       "id": "de962508",
       "metadata": {
         "collapsed": false,
@@ -1490,7 +1490,7 @@
               "      dtype='object', length=123)"
             ]
           },
-          "execution_count": 95,
+          "execution_count": 46,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1501,7 +1501,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 96,
+      "execution_count": 47,
       "id": "90f5426f",
       "metadata": {
         "collapsed": false,
@@ -1546,7 +1546,7 @@
               "Length: 123, dtype: object"
             ]
           },
-          "execution_count": 96,
+          "execution_count": 47,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1557,7 +1557,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 97,
+      "execution_count": 48,
       "metadata": {},
       "outputs": [
         {
@@ -1755,7 +1755,7 @@
               "[5 rows x 123 columns]"
             ]
           },
-          "execution_count": 97,
+          "execution_count": 48,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1777,14 +1777,10 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 98,
+      "execution_count": 49,
       "metadata": {},
       "outputs": [],
       "source": [
-        "# 10 Popular Classificaiton Methods can be found here:\n",
-        "# https://www.educative.io/blog/scikit-learn-cheat-sheet-classification-regression-methods\n",
-        "# https://www.kaggle.com/code/ec200000/dsi-project#Modeling\n",
-        "\n",
         "# Here we seperate the defualted from the rest of the dataset\n",
         "y = df['Defaulted']\n",
         "X = df.drop(columns=['Defaulted'])\n",
@@ -1805,7 +1801,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 99,
+      "execution_count": 50,
       "metadata": {},
       "outputs": [
         {
@@ -1814,7 +1810,7 @@
               "RandomForestClassifier()"
             ]
           },
-          "execution_count": 99,
+          "execution_count": 50,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1829,7 +1825,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 100,
+      "execution_count": 51,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -1849,20 +1845,12 @@
         "## Results presentation\n",
         "\n",
         "This is the final step. Here, you will provide the outcomes of your analysis. These outcomes can be in the form of tables, plots, or both. \n",
-        "As an extra step, you could also provide numerical results showing the efficiency of your model that can be described using specific ML characteristics:\n",
-        "\n",
-        " - accuracy\n",
-        " - precision/recall\n",
-        " - F1 score\n",
-        " - Area Under Curve\n",
-        " - ...\n",
-        "\n",
-        "We will discuss further about those in class."
+        "As an extra step, you could also provide numerical results showing the efficiency of your model that can be described using specific ML characteristics:"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 101,
+      "execution_count": 52,
       "metadata": {
         "id": "GvJ5GWUr9y9P"
       },
@@ -1871,13 +1859,14 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "The Random Forest model has a accuracy score of 0.9999693686886736 and a F1 score of 0.999974473776911.\n",
-            "This model also has a Precision Score of 0.9999795789172742.\n",
-            "This model also has a recall score of 0.9999693686886736.\n",
+            "The Random Forest model has a accuracy score of 0.9999744739072279 and a F1 score of 0.9999795790215287.\n",
+            "This model also has a Precision Score of 0.9999846841879556.\n",
+            "This model also has a recall score of 0.9999744739072279.\n",
+            "Below is the confusion matrix for the model:\n",
             "[[[ 31812      1]\n",
-            "  [     4 164061]]\n",
+            "  [     3 164062]]\n",
             "\n",
-            " [[164062      3]\n",
+            " [[164063      2]\n",
             "  [     2  31811]]]\n"
           ]
         }
@@ -1894,6 +1883,7 @@
         "print(f\"The Random Forest model has a accuracy score of {accuracy} and a F1 score of {f1}.\")\n",
         "print(f\"This model also has a Precision Score of {psc}.\")\n",
         "print(f\"This model also has a recall score of {rsc}.\")\n",
+        "print(\"Below is the confusion matrix for the model:\")\n",
         "print(cfmm)"
       ]
     }
